--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/jest": "^25.2.1",
+    "@types/node": "^13.13.4",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.7",
+    "@types/styled-components": "^5.1.0",
     "axios": "^0.19.2",
     "next": "9.3.6",
     "next-images": "^1.4.0",
@@ -21,6 +26,10 @@
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-export-default-from": "^7.8.3"
+    "@babel/plugin-proposal-export-default-from": "^7.8.3",
+    "@types/react-redux": "^7.1.8",
+    "source-map-loader": "^0.2.4",
+    "ts-loader": "^7.0.2",
+    "typescript": "^3.8.3"
   }
 }
